<resources>
    <string name="descubre_oportunidades">Descubre Oportunidades</string>
    <string name="descripcion_recycler_oportunidades">Descubre Oportunidades</string>
    <string name="crear_oportunidad">Crear Oportunidad</string>
        <string name="nombre_oportunidad">Nombre de la oportunidad</string>
        <string name="opcion_privada">¿Oportunidad privada?</string>
        <string name="publicar">Publicar</string>
    <string name="titulo_mis_oportunidades">Mis Oportunidades</string>
    <string name="recycler_mis_oportunidades">Listado de oportunidades creadas</string>
    <string name="app_name">URNET</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="reset_password">reset password</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="bio">bio</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="todo">TODO</string>
    <string name="imagen_evento">Imagen del evento</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="titulo_evento">Título del evento</string>
    <string name="descripcion">Descripción</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="seleccionar_hora">Seleccionar hora</string>
    <string name="seleccionar_ubicacion">Seleccionar ubicación</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="registration">REGISTRATION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>